@@ -15,6 +15,8 @@
 	<LI>Added support for transparency in PostScript and
 	PDF 1.1 and 1.2 output.
 	<LI>Added a --no-jpeg option (same as --jpeg=0)
+	<LI>Added support for the CSS2 page-break-before and
+	page-break-after properties.
 
 	<H3>Changes</H3>
 
